--- a/showFormPost.html
+++ b/showFormPost.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Form</title>
+	<title>Form Post</title>
 </head>
 <body>
-	<form action="/showData" method="get">
+	<form action="/showDataPost" method="post">
 		FIRST NAME : <input type="text" name="fname"><br>
 		LAST NAME : <input type="text" name="lname"><br>
 		<input type="submit" value="SAVE">
